--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@vitejs/plugin-react-refresh": "^1.3.6",
     "framer-motion": "^6.3.3",
     "react": "^18.0.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-player": "^2.10.0",
     "react-scroll-parallax": "^3.1.0",
@@ -28,6 +30,7 @@
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.0",
+    "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/react-dom": "^18.0.0",
     "@types/react-lottie": "^1.2.6",
     "@types/three": "^0.139.0",
