--- a/package.json
+++ b/package.json
@@ -13,17 +13,21 @@
     "@react-three/drei": "^9.5.0",
     "@react-three/fiber": "^8.0.12",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^6.3.3",
     "react": "^18.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-cssfx-loading": "^1.1.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.31.1",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
-    "react-player": "^2.10.0",
     "react-scroll-parallax": "^3.1.0",
-    "react-spring": "^9.4.4",
+    "react-tsparticles": "^2.0.6",
+    "react-typewriter-effect": "^1.1.0",
     "three": "^0.139.2",
-    "typed.js": "^2.0.12",
+    "tsparticles": "^2.0.6",
+    "typewriter-effect": "^2.18.2",
     "vite-plugin-svgr": "^1.1.0"
   },
   "devDependencies": {
