--- a/package.json
+++ b/package.json
@@ -8,27 +8,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.8.8",
     "@react-spring/parallax": "^9.4.4",
     "@react-spring/web": "^9.4.4",
     "@react-three/drei": "^9.5.0",
     "@react-three/fiber": "^8.0.12",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "bootstrap": "^5.1.3",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^6.3.3",
     "react": "^18.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-bootstrap": "^2.3.1",
     "react-cssfx-loading": "^1.1.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.31.1",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
     "react-scroll-parallax": "^3.1.0",
-    "react-tsparticles": "^2.0.6",
-    "react-typewriter-effect": "^1.1.0",
+    "react-sprite-animator": "^2.0.2",
     "three": "^0.139.2",
-    "tsparticles": "^2.0.6",
-    "typewriter-effect": "^2.18.2",
-    "vite-plugin-svgr": "^1.1.0"
+    "vite-plugin-svgr": "^1.1.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@honkhonk/vite-plugin-svgr": "^1.1.0",
