--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "framer-motion": "^6.3.3",
     "react": "^18.0.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-awesome-reveal": "^3.8.1",
     "react-bootstrap": "^2.3.1",
     "react-cssfx-loading": "^1.1.0",
     "react-dom": "^18.0.0",
+    "react-fade-in": "^2.0.1",
     "react-hook-form": "^7.31.1",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
+    "react-reveal": "^1.2.2",
     "react-scroll-parallax": "^3.1.0",
     "react-sprite-animator": "^2.0.2",
     "three": "^0.139.2",
