--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,6 @@
     "jsx": "react-jsx",
     "types": [ "@honkhonk/vite-plugin-svgr/client", "node" ]
   },
-  "include": ["src"],
+  "include": ["src", "./types"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
