--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-awesome-reveal": "^3.8.1",
     "react-bootstrap": "^2.3.1",
+    "react-burger-menu": "^3.0.6",
     "react-cssfx-loading": "^1.1.0",
     "react-dom": "^18.0.0",
     "react-fade-in": "^2.0.1",
     "react-hook-form": "^7.31.1",
     "react-icons": "^4.3.1",
     "react-lottie": "^1.2.3",
+    "react-responsive": "^9.0.0-beta.8",
     "react-reveal": "^1.2.2",
     "react-scroll-parallax": "^3.1.0",
     "react-sprite-animator": "^2.0.2",
@@ -39,6 +41,7 @@
     "@types/node": "^17.0.31",
     "@types/react": "^18.0.0",
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
+    "@types/react-burger-menu": "^2.8.3",
     "@types/react-dom": "^18.0.0",
     "@types/react-lottie": "^1.2.6",
     "@types/three": "^0.139.0",
@@ -46,6 +49,7 @@
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24",
+    "tailwindcss-writing-mode": "^1.0.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.5"
   }
