--- a/package.json
+++ b/package.json
@@ -9,8 +9,6 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.8.8",
-    "@react-spring/parallax": "^9.4.4",
-    "@react-spring/web": "^9.4.4",
     "@react-three/drei": "^9.5.0",
     "@react-three/fiber": "^8.0.12",
     "@vitejs/plugin-react-refresh": "^1.3.6",
@@ -21,7 +19,6 @@
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-awesome-reveal": "^3.8.1",
     "react-bootstrap": "^2.3.1",
-    "react-burger-menu": "^3.0.6",
     "react-cssfx-loading": "^1.1.0",
     "react-dom": "^18.0.0",
     "react-fade-in": "^2.0.1",
@@ -32,6 +29,7 @@
     "react-reveal": "^1.2.2",
     "react-scroll-parallax": "^3.1.0",
     "react-sprite-animator": "^2.0.2",
+    "swiper": "^8.1.4",
     "three": "^0.139.2",
     "vite-plugin-svgr": "^1.1.0",
     "yup": "^0.32.11"
@@ -49,7 +47,6 @@
     "autoprefixer": "^10.4.4",
     "postcss": "^8.4.12",
     "tailwindcss": "^3.0.24",
-    "tailwindcss-writing-mode": "^1.0.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.5"
   }
