--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.1",
     "@hookform/resolvers": "^2.8.8",
     "@react-three/drei": "^9.5.0",
     "@react-three/fiber": "^8.0.12",
